--- a/Class2/Intro-to-pandas.ipynb
+++ b/Class2/Intro-to-pandas.ipynb
@@ -4538,9 +4538,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-stats404-class0",
+   "display_name": "env-stats404-w20",
    "language": "python",
-   "name": "env-stats404-class0"
+   "name": "env-stats404-w20"
   },
   "language_info": {
    "codemirror_mode": {
