--- a/Class5/Intro-to-AWS-S3.ipynb
+++ b/Class5/Intro-to-AWS-S3.ipynb
@@ -12,22 +12,31 @@
     "Prerequisites:\n",
     "- Installation of `boto3`\n",
     "- Creating and adding AWS credentials to `.aws/credentials` file\n",
-    "- Creating and adding AWS region for computing resources in `.aws/config` file"
+    "- Creating and adding AWS region for computing resources in `.aws/config` file\n",
+    "\n",
+    "Reference for `s3fs` [here](https://s3fs.readthedocs.io/en/latest/?badge=latest); note:`s3fs` is a wrapper for `boto3`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import boto3\n",
     "import joblib\n",
     "import pandas as pd\n",
-    "\n",
-    "# Documentation: https://s3fs.readthedocs.io/en/latest/?badge=latest\n",
-    "# Note: s3fs is a wrapper for boto3\n",
     "import s3fs "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Specify name of AWS S3 bucket you created:\n",
+    "bucket_name = \"stats404-project\""
    ]
   },
   {
@@ -43,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,49 +66,63 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "View list of all buckets available on AWS. Note: These are mine -- yours will differ:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
+   "source": [
+    "View list of all buckets available on AWS via `s3.buckets.all()`. \n",
+    "\n",
+    "My bucket for the project:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "decision-trees\n",
-      "stats404-project\n",
-      "www.kukuyevaconsulting.com\n"
+      "stats404-project\n"
      ]
     }
    ],
    "source": [
     "for bucket in s3.buckets.all():\n",
-    "    print(bucket.name)"
+    "    if bucket.name == bucket_name:\n",
+    "        print(bucket.name)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
    "source": [
     "View list of objects in given bucket:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "airlines_data_1987_1000rows.csv\n",
+      "rf_Fashion_MNIST_500_trees.joblib\n"
+     ]
+    }
+   ],
    "source": [
-    "for file in s3.Bucket('stats404-project').objects.all():\n",
+    "for file in s3.Bucket(bucket_name).objects.all():\n",
     "    print(file.key)"
    ]
   },
@@ -116,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,13 +147,12 @@
     "file_name = \"https://s3.amazonaws.com/h2o-airlines-unpacked/year1987.csv\"\n",
     "df = pd.read_csv(filepath_or_buffer=file_name,\n",
     "                 encoding='latin-1',\n",
-    "                 nrows=1000\n",
-    "                )\n"
+    "                 nrows=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -138,33 +160,38 @@
    },
    "outputs": [],
    "source": [
-    "# --- Step 2: Specify name of bucket to upload to:\n",
-    "bucket_name = \"stats404-project\"\n",
-    "\n",
-    "# --- Step 3: Specify name of file to be created on s3, to store this CSV:\n",
-    "key_name = \"airlines_data_1987_1000rows.csv\"\n",
-    "\n",
-    "# --- Step 4: Upload file to bucket and file name specified: \n",
-    "with s3_fs.open(f\"{bucket_name}/{key_name}\",\"w\") as file:\n",
-    "    df.to_csv(file)\n"
+    "# --- Step 2: Specify name of file to be created on s3, to store this CSV:\n",
+    "key_name = \"airlines_data_1987_1000rows.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Step 3: Upload file to bucket and file name specified: \n",
+    "with s3_fs.open(f\"{bucket_name}/{key_name}\",\"w\") as file:\n",
+    "    df.to_csv(file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "airlines_data_1987_1000rows.csv\n"
+      "airlines_data_1987_1000rows.csv\n",
+      "rf_Fashion_MNIST_500_trees.joblib\n"
      ]
     }
    ],
    "source": [
-    "# --- Step 5: Check that file got uploaded:\n",
-    "for file in s3.Bucket('stats404-project').objects.all():\n",
+    "# --- Step 4: Check that file got uploaded:\n",
+    "for file in s3.Bucket(bucket_name).objects.all():\n",
     "    print(file.key)"
    ]
   },
@@ -181,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -211,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +252,7 @@
    ],
    "source": [
     "# --- Step 5: Check that file got uploaded:\n",
-    "for file in s3.Bucket('stats404-project').objects.all():\n",
+    "for file in s3.Bucket(bucket_name).objects.all():\n",
     "    print(file.key)"
    ]
   },
@@ -250,9 +277,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-stats404-class0",
+   "display_name": "env-stats404-w20",
    "language": "python",
-   "name": "env-stats404-class0"
+   "name": "env-stats404-w20"
   },
   "language_info": {
    "codemirror_mode": {
@@ -264,9 +291,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
