--- a/Class5/Speeding-up-computations-Python.ipynb
+++ b/Class5/Speeding-up-computations-Python.ipynb
@@ -170,9 +170,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 29.7 s, sys: 6.88 s, total: 36.6 s\n",
+      "Wall time: 2min 24s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# Create an object for iteration over, to spead-up read-ing process:\n",
@@ -225,9 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "973 ms ± 35.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "dd.read_csv(file_name, encoding='latin-1')"
@@ -235,9 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 85.2 ms, sys: 17.2 ms, total: 102 ms\n",
+      "Wall time: 954 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "df_dask = dd.read_csv(file_name,\n",
@@ -333,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,9 +370,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 43.2 s, sys: 195 ms, total: 43.4 s\n",
+      "Wall time: 43.5 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "for i in range(num_rows):\n",
@@ -355,13 +390,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.19 s, sys: 283 ms, total: 1.47 s\n",
+      "Wall time: 1.48 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "dep_delay_hr_apply = df['DepDelay'].apply(lambda x: x/60.0)"
@@ -369,13 +413,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "103 ms ± 5.21 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "delay_hr_apply = df[['DepDelay', 'ArrDelay']].apply(lambda x: x/60.0)"
@@ -383,13 +435,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.2 s ± 230 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit\n",
     "delay_hr_applymap = df[['DepDelay', 'ArrDelay']].applymap(lambda x: x/60.0)"
@@ -419,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,13 +500,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.01 s, sys: 142 ms, total: 2.15 s\n",
+      "Wall time: 1.72 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "delay_bin = df['DepDelay'].apply(lambda x: bin_departure_delays(x))"
@@ -454,22 +523,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "no_delay             5067251\n",
+       "small_delay           366563\n",
+       "medium_delay          292710\n",
+       "big_delay             195039\n",
+       "compensated_delay      99476\n",
+       "missing_delay          75723\n",
+       "Name: DepDelay, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "delay_bin.value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 830 ms, sys: 85.3 ms, total: 916 ms\n",
+      "Wall time: 231 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "df['DepDelay'] = df['DepDelay'].fillna(9999)\n",
@@ -481,9 +576,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "no_delay             5067251\n",
+       "small_delay           366563\n",
+       "medium_delay          292710\n",
+       "big_delay             195039\n",
+       "compensated_delay      99476\n",
+       "missing_delay          75723\n",
+       "Name: DepDelay, dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "delay_bin_cut.value_counts()"
    ]
@@ -539,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,13 +676,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2min 13s, sys: 634 ms, total: 2min 14s\n",
+      "Wall time: 2min 14s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "df['compensated_delays'] = df[['ArrDelay', 'DepDelay']].apply(\n",
@@ -580,9 +701,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({0: 5919407, 1: 177355})"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Counter(df['compensated_delays'])"
    ]
@@ -600,9 +732,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(True | True)\n",
     "print(True | False)\n",
@@ -612,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -641,13 +784,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 45.9 ms, sys: 11.1 ms, total: 57.1 ms\n",
+      "Wall time: 22.2 ms\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "df['compensated_delays_vec'] = delays_requiring_compensation_vec(df['ArrDelay'], df['DepDelay'])"
@@ -655,9 +807,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({False: 5919407, True: 177355})"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Counter(df['compensated_delays_vec'])"
    ]
@@ -682,31 +845,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(df['ArrDelay'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(df['ArrDelay'].values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 21.7 ms, sys: 3.76 ms, total: 25.4 ms\n",
+      "Wall time: 19 ms\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/env-stats404-w20/lib/python3.7/site-packages/ipykernel_launcher.py:13: RuntimeWarning: invalid value encountered in greater_equal\n",
+      "  del sys.path[0]\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "df['compensated_delays_vec_np'] = delays_requiring_compensation_vec(df['ArrDelay'].values, df['DepDelay'].values)"
@@ -714,9 +916,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({False: 5919407, True: 177355})"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Counter(df['compensated_delays_vec_np'])"
    ]
@@ -764,9 +977,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 48.3 s, sys: 20.5 s, total: 1min 8s\n",
+      "Wall time: 1min 43s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "WN    1140535\n",
+       "EV     740855\n",
+       "DL     726879\n",
+       "OO     617756\n",
+       "UA     531245\n",
+       "AA     525220\n",
+       "MQ     473140\n",
+       "US     404263\n",
+       "B6     229056\n",
+       "FL     218162\n",
+       "AS     147569\n",
+       "YV     133976\n",
+       "F9      79255\n",
+       "HA      74109\n",
+       "VX      54742\n",
+       "Name: UniqueCarrier, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
     "df_dask['UniqueCarrier'].value_counts().compute()"
@@ -833,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,13 +1103,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   32.6s finished\n"
+     ]
+    }
+   ],
    "source": [
     "rf_base = RandomForestClassifier(n_estimators=500,\n",
     "                                 min_samples_leaf=30,\n",
@@ -886,9 +1142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Signature (n_estimators=100, criterion='gini', max_depth=None, min_samples_split=2, min_samples_leaf=1, min_weight_fraction_leaf=0.0, max_features='auto', max_leaf_nodes=None, min_impurity_decrease=0.0, min_impurity_split=None, bootstrap=True, oob_score=False, n_jobs=None, random_state=None, verbose=0, warm_start=False, class_weight=None, ccp_alpha=0.0, max_samples=None)>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "inspect.signature(RandomForestClassifier)"
    ]
@@ -909,13 +1176,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=2)]: Using backend ThreadingBackend with 2 concurrent workers.\n",
+      "[Parallel(n_jobs=2)]: Done  46 tasks      | elapsed:    1.5s\n",
+      "[Parallel(n_jobs=2)]: Done 196 tasks      | elapsed:    6.8s\n",
+      "[Parallel(n_jobs=2)]: Done 446 tasks      | elapsed:   15.6s\n",
+      "[Parallel(n_jobs=2)]: Done 500 out of 500 | elapsed:   17.6s finished\n"
+     ]
+    }
+   ],
    "source": [
     "rf_base_parallel2 = RandomForestClassifier(n_estimators=500,\n",
     "                                 min_samples_leaf=30,\n",
@@ -935,13 +1214,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Using backend ThreadingBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    1.0s\n",
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:    4.1s\n",
+      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:    8.8s\n",
+      "[Parallel(n_jobs=4)]: Done 500 out of 500 | elapsed:    9.8s finished\n"
+     ]
+    }
+   ],
    "source": [
     "rf_base_parallel4 = RandomForestClassifier(n_estimators=500,\n",
     "                                 min_samples_leaf=30,\n",
@@ -972,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,9 +1302,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    3.1s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    7.1s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   16.9s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   31.1s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.0min finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  1.6min finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  2.5min finished\n"
+     ]
+    }
+   ],
    "source": [
     "for num_trees in n_trees:\n",
     "    rf_spec(num_trees)"
@@ -1032,13 +1344,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Using backend ThreadingBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    3.8s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    7.7s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   18.7s finished\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   37.1s finished\n",
+      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.2min finished\n",
+      "[Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  1.7min finished\n",
+      "[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  2.6min finished\n",
+      "[Parallel(n_jobs=4)]: Done   7 out of   7 | elapsed:  3.1min finished\n"
+     ]
+    }
+   ],
    "source": [
     "# Per http://academic.bancey.com/parallelization-in-python-example-with-joblib/\n",
     "results = Parallel(n_jobs=4, verbose=1, backend=\"threading\")(map(delayed(rf_spec), n_trees))"
