Add associated Jupyter notebook

--- a/Class5/Speeding-up-computations-Python.ipynb
+++ b/Class5/Speeding-up-computations-Python.ipynb
@@ -65,8 +65,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 18 s, sys: 4.35 s, total: 22.4 s\n",
-      "Wall time: 1min 43s\n"
+      "CPU times: user 17.9 s, sys: 3.87 s, total: 21.8 s\n",
+      "Wall time: 1min 41s\n"
      ]
     }
    ],
@@ -122,28 +122,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 495 ms, sys: 15.3 ms, total: 510 ms\n",
-      "Wall time: 502 ms\n"
+      "CPU times: user 536 ms, sys: 17.8 ms, total: 554 ms\n",
+      "Wall time: 544 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "UA     531245\n",
-       "B6     229056\n",
-       "WN    1140535\n",
-       "OO     617756\n",
        "AA     525220\n",
-       "EV     740855\n",
        "YV     133976\n",
-       "HA      74109\n",
+       "UA     531245\n",
+       "AS     147569\n",
        "FL     218162\n",
        "US     404263\n",
-       "F9      79255\n",
-       "DL     726879\n",
        "MQ     473140\n",
+       "F9      79255\n",
+       "HA      74109\n",
+       "DL     726879\n",
+       "WN    1140535\n",
        "VX      54742\n",
-       "AS     147569\n",
+       "EV     740855\n",
+       "B6     229056\n",
+       "OO     617756\n",
        "Name: UniqueCarrier, dtype: int64"
       ]
      },
@@ -193,8 +193,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 25.7 s, sys: 6.1 s, total: 31.8 s\n",
-      "Wall time: 1min 44s\n"
+      "CPU times: user 26.8 s, sys: 5.34 s, total: 32.1 s\n",
+      "Wall time: 1min 46s\n"
      ]
     }
    ],
@@ -257,7 +257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "987 ms ± 56.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "986 ms ± 23 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -275,8 +275,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 110 ms, sys: 21.8 ms, total: 132 ms\n",
-      "Wall time: 960 ms\n"
+      "CPU times: user 92.4 ms, sys: 18 ms, total: 110 ms\n",
+      "Wall time: 1.03 s\n"
      ]
     }
    ],
@@ -393,8 +393,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 39.4 s, sys: 68.4 ms, total: 39.5 s\n",
-      "Wall time: 39.5 s\n"
+      "CPU times: user 47 s, sys: 123 ms, total: 47.1 s\n",
+      "Wall time: 47.1 s\n"
      ]
     }
    ],
@@ -417,8 +417,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.08 s, sys: 205 ms, total: 1.29 s\n",
-      "Wall time: 1.29 s\n"
+      "CPU times: user 1.2 s, sys: 255 ms, total: 1.45 s\n",
+      "Wall time: 1.45 s\n"
      ]
     }
    ],
@@ -440,7 +440,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "81.5 ms ± 365 µs per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "97.1 ms ± 1.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -462,7 +462,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.72 s ± 8.07 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "4.23 s ± 26.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -527,8 +527,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.9 s, sys: 106 ms, total: 2 s\n",
-      "Wall time: 1.55 s\n"
+      "CPU times: user 2.04 s, sys: 125 ms, total: 2.17 s\n",
+      "Wall time: 1.77 s\n"
      ]
     }
    ],
@@ -576,13 +576,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 700 ms, sys: 51.4 ms, total: 751 ms\n",
-      "Wall time: 189 ms\n"
+      "CPU times: user 754 ms, sys: 61.1 ms, total: 815 ms\n",
+      "Wall time: 212 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "# Redo recoding of missing values, per \n",
+    "# https://stackoverflow.com/questions/54922775/using-magic-command-timeit-n1-r1-causes-jupyter-does-not-keep-the-value-of\n",
     "delay_bin_cut = pd.cut(df['DepDelay'].fillna(-9999),\n",
     "                       bins=[-20000, -60.0, 15, 30, 60, 120, 10000],\n",
     "                       labels=[\"missing_delay\", \"no_delay\", \"small_delay\", \"medium_delay\", \"big_delay\", \"compensated_delay\"],\n",
@@ -703,8 +705,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 58s, sys: 161 ms, total: 1min 58s\n",
-      "Wall time: 1min 58s\n"
+      "CPU times: user 2min 14s, sys: 387 ms, total: 2min 15s\n",
+      "Wall time: 2min 15s\n"
      ]
     }
    ],
@@ -811,8 +813,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 48.1 ms, sys: 11.1 ms, total: 59.2 ms\n",
-      "Wall time: 21.9 ms\n"
+      "CPU times: user 52.6 ms, sys: 12.8 ms, total: 65.3 ms\n",
+      "Wall time: 25.4 ms\n"
      ]
     }
    ],
@@ -913,23 +915,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 15.2 ms, sys: 2.63 ms, total: 17.8 ms\n",
-      "Wall time: 11.6 ms\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/env-stats404-w20/lib/python3.7/site-packages/ipykernel_launcher.py:13: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  del sys.path[0]\n",
-      "/opt/anaconda3/envs/env-stats404-w20/lib/python3.7/site-packages/ipykernel_launcher.py:14: RuntimeWarning: invalid value encountered in greater_equal\n",
-      "  \n"
+      "CPU times: user 381 ms, sys: 56.9 ms, total: 438 ms\n",
+      "Wall time: 127 ms\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
+    "# Redo recoding of missing values, per \n",
+    "# https://stackoverflow.com/questions/54922775/using-magic-command-timeit-n1-r1-causes-jupyter-does-not-keep-the-value-of\n",
+    "df[\"DepDelay\"] = df[\"DepDelay\"].fillna(-9999)\n",
+    "df[\"ArrDelay\"] = df[\"ArrDelay\"].fillna(-9999)\n",
     "df['compensated_delays_vec_np'] = delays_requiring_compensation_vec(df['ArrDelay'].values, \n",
     "                                                                    df['DepDelay'].values)"
    ]
@@ -1015,8 +1011,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 47.5 s, sys: 18.3 s, total: 1min 5s\n",
-      "Wall time: 1min 41s\n"
+      "CPU times: user 44 s, sys: 15.5 s, total: 59.5 s\n",
+      "Wall time: 1min 45s\n"
      ]
     },
     {
@@ -1146,7 +1142,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   28.9s finished\n"
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   32.8s finished\n"
      ]
     }
    ],
@@ -1219,10 +1215,10 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=2)]: Using backend ThreadingBackend with 2 concurrent workers.\n",
-      "[Parallel(n_jobs=2)]: Done  46 tasks      | elapsed:    1.4s\n",
-      "[Parallel(n_jobs=2)]: Done 196 tasks      | elapsed:    5.8s\n",
-      "[Parallel(n_jobs=2)]: Done 446 tasks      | elapsed:   13.2s\n",
-      "[Parallel(n_jobs=2)]: Done 500 out of 500 | elapsed:   14.8s finished\n"
+      "[Parallel(n_jobs=2)]: Done  46 tasks      | elapsed:    1.8s\n",
+      "[Parallel(n_jobs=2)]: Done 196 tasks      | elapsed:    7.2s\n",
+      "[Parallel(n_jobs=2)]: Done 446 tasks      | elapsed:   16.3s\n",
+      "[Parallel(n_jobs=2)]: Done 500 out of 500 | elapsed:   18.1s finished\n"
      ]
     }
    ],
@@ -1257,10 +1253,10 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=4)]: Using backend ThreadingBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    0.7s\n",
-      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:    3.2s\n",
-      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:    7.2s\n",
-      "[Parallel(n_jobs=4)]: Done 500 out of 500 | elapsed:    8.1s finished\n"
+      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    0.9s\n",
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:    3.9s\n",
+      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:    8.9s\n",
+      "[Parallel(n_jobs=4)]: Done 500 out of 500 | elapsed:   10.1s finished\n"
      ]
     }
    ],
@@ -1341,19 +1337,19 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    2.9s finished\n",
+      "[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    3.4s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    5.8s finished\n",
+      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    6.7s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   14.5s finished\n",
+      "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   15.7s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   28.8s finished\n",
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   30.7s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:   57.7s finished\n",
+      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.1min finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  1.4min finished\n",
+      "[Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  1.6min finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  2.4min finished\n"
+      "[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  2.9min finished\n"
      ]
     }
    ],
@@ -1391,17 +1387,17 @@
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    3.7s finished\n",
+      "[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    5.2s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    7.5s finished\n",
+      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:   10.1s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   18.2s finished\n",
+      "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   24.3s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   36.0s finished\n",
-      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.1min finished\n",
-      "[Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  1.6min finished\n",
-      "[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  2.6min finished\n",
-      "[Parallel(n_jobs=4)]: Done   7 out of   7 | elapsed:  3.0min finished\n"
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   47.4s finished\n",
+      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.5min finished\n",
+      "[Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  2.0min finished\n",
+      "[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  3.1min finished\n",
+      "[Parallel(n_jobs=4)]: Done   7 out of   7 | elapsed:  3.8min finished\n"
      ]
     }
    ],
