Add associated Jupyter notebook

--- a/Class3/Intro-to-sklearn.ipynb
+++ b/Class3/Intro-to-sklearn.ipynb
@@ -577,7 +577,15 @@
     }
    },
    "source": [
-    "## Step 4: Data Splits (later today)"
+    "## Step 4: Data Splits (later today)\n",
+    "**Note**: It is best practice to:\n",
+    "- *first* split the data, \n",
+    "- *then* transform variables on training data set and iron-out the POC model, \n",
+    "- *before* moving on to test model on test data set **once**\n",
+    "\n",
+    "Because we're *only* transforming TOD, DOW and outcome on rules we decided *a priori*, this is OK. \n",
+    "\n",
+    "**Warning**: If our outcome variable was total compensation for plane delayed, which depended on size of place, we would have leakage if we created a binned outcome variable based on seeing *both* training and test set first. "
    ]
   },
   {
@@ -2501,7 +2509,7 @@
     }
    },
    "source": [
-    "**Takeaways/Recommendations to your airline client?**\n"
+    "**How business will use (predicted) model to make decision(s):** e.g. Takeaways/Recommendations to your airline client?\n"
    ]
   },
   {
@@ -3066,6 +3074,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "If this were a promising model, **what would the metric monitoring** look like?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -3097,7 +3116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
