Update name of virtual env used in W21

--- a/Class5/Speeding-up-computations-Python.ipynb
+++ b/Class5/Speeding-up-computations-Python.ipynb
@@ -1472,9 +1472,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-stats404-w20",
+   "display_name": "env-stats404",
    "language": "python",
-   "name": "env-stats404-w20"
+   "name": "env-stats404"
   },
   "language_info": {
    "codemirror_mode": {
