Add associated notebook for speeding up computations in Python

--- a/Class5/Speeding-up-computations-Python.ipynb
+++ b/Class5/Speeding-up-computations-Python.ipynb
@@ -19,13 +19,14 @@
    "outputs": [],
    "source": [
     "from collections import Counter\n",
-    "import dask.dataframe as dd\n",
     "import inspect\n",
+    "import os\n",
+    "import requests\n",
+    "\n",
+    "import dask.dataframe as dd\n",
     "from joblib import Parallel, delayed\n",
     "import numpy as np\n",
-    "import os\n",
     "import pandas as pd\n",
-    "import requests\n",
     "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
@@ -65,8 +66,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 17.9 s, sys: 3.87 s, total: 21.8 s\n",
-      "Wall time: 1min 41s\n"
+      "CPU times: user 15.5 s, sys: 4.76 s, total: 20.2 s\n",
+      "Wall time: 1min 27s\n"
      ]
     }
    ],
@@ -122,28 +123,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 536 ms, sys: 17.8 ms, total: 554 ms\n",
-      "Wall time: 544 ms\n"
+      "CPU times: user 496 ms, sys: 25.4 ms, total: 521 ms\n",
+      "Wall time: 517 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "AA     525220\n",
-       "YV     133976\n",
-       "UA     531245\n",
-       "AS     147569\n",
-       "FL     218162\n",
-       "US     404263\n",
        "MQ     473140\n",
-       "F9      79255\n",
-       "HA      74109\n",
        "DL     726879\n",
        "WN    1140535\n",
-       "VX      54742\n",
+       "AA     525220\n",
        "EV     740855\n",
+       "FL     218162\n",
+       "US     404263\n",
+       "UA     531245\n",
+       "VX      54742\n",
+       "YV     133976\n",
        "B6     229056\n",
        "OO     617756\n",
+       "AS     147569\n",
+       "HA      74109\n",
+       "F9      79255\n",
        "Name: UniqueCarrier, dtype: int64"
       ]
      },
@@ -193,8 +194,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 26.8 s, sys: 5.34 s, total: 32.1 s\n",
-      "Wall time: 1min 46s\n"
+      "CPU times: user 25.2 s, sys: 6.22 s, total: 31.4 s\n",
+      "Wall time: 1min 32s\n"
      ]
     }
    ],
@@ -257,7 +258,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "986 ms ± 23 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.52 s ± 23 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -275,8 +276,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 92.4 ms, sys: 18 ms, total: 110 ms\n",
-      "Wall time: 1.03 s\n"
+      "CPU times: user 106 ms, sys: 27.9 ms, total: 134 ms\n",
+      "Wall time: 1.49 s\n"
      ]
     }
    ],
@@ -393,8 +394,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 47 s, sys: 123 ms, total: 47.1 s\n",
-      "Wall time: 47.1 s\n"
+      "CPU times: user 47.9 s, sys: 232 ms, total: 48.1 s\n",
+      "Wall time: 48.2 s\n"
      ]
     }
    ],
@@ -417,8 +418,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.2 s, sys: 255 ms, total: 1.45 s\n",
-      "Wall time: 1.45 s\n"
+      "CPU times: user 1.15 s, sys: 209 ms, total: 1.36 s\n",
+      "Wall time: 1.36 s\n"
      ]
     }
    ],
@@ -440,7 +441,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "97.1 ms ± 1.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "72.3 ms ± 3.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -462,7 +463,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4.23 s ± 26.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "3.88 s ± 30 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -527,8 +528,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.04 s, sys: 125 ms, total: 2.17 s\n",
-      "Wall time: 1.77 s\n"
+      "CPU times: user 1.86 s, sys: 78.2 ms, total: 1.94 s\n",
+      "Wall time: 1.6 s\n"
      ]
     }
    ],
@@ -576,8 +577,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 754 ms, sys: 61.1 ms, total: 815 ms\n",
-      "Wall time: 212 ms\n"
+      "CPU times: user 692 ms, sys: 38.5 ms, total: 731 ms\n",
+      "Wall time: 185 ms\n"
      ]
     }
    ],
@@ -705,8 +706,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 14s, sys: 387 ms, total: 2min 15s\n",
-      "Wall time: 2min 15s\n"
+      "CPU times: user 2min 6s, sys: 335 ms, total: 2min 7s\n",
+      "Wall time: 2min 7s\n"
      ]
     }
    ],
@@ -813,8 +814,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 52.6 ms, sys: 12.8 ms, total: 65.3 ms\n",
-      "Wall time: 25.4 ms\n"
+      "CPU times: user 42.3 ms, sys: 8.35 ms, total: 50.6 ms\n",
+      "Wall time: 20.3 ms\n"
      ]
     }
    ],
@@ -915,8 +916,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 381 ms, sys: 56.9 ms, total: 438 ms\n",
-      "Wall time: 127 ms\n"
+      "CPU times: user 304 ms, sys: 23.5 ms, total: 328 ms\n",
+      "Wall time: 86 ms\n"
      ]
     }
    ],
@@ -1011,8 +1012,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 44 s, sys: 15.5 s, total: 59.5 s\n",
-      "Wall time: 1min 45s\n"
+      "CPU times: user 40.3 s, sys: 11.5 s, total: 51.8 s\n",
+      "Wall time: 1min 33s\n"
      ]
     },
     {
@@ -1142,7 +1143,7 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   32.8s finished\n"
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   33.0s finished\n"
      ]
     }
    ],
@@ -1175,7 +1176,7 @@
     {
      "data": {
       "text/plain": [
-       "<Signature (n_estimators=100, criterion='gini', max_depth=None, min_samples_split=2, min_samples_leaf=1, min_weight_fraction_leaf=0.0, max_features='auto', max_leaf_nodes=None, min_impurity_decrease=0.0, min_impurity_split=None, bootstrap=True, oob_score=False, n_jobs=None, random_state=None, verbose=0, warm_start=False, class_weight=None, ccp_alpha=0.0, max_samples=None)>"
+       "<Signature (n_estimators='warn', criterion='gini', max_depth=None, min_samples_split=2, min_samples_leaf=1, min_weight_fraction_leaf=0.0, max_features='auto', max_leaf_nodes=None, min_impurity_decrease=0.0, min_impurity_split=None, bootstrap=True, oob_score=False, n_jobs=None, random_state=None, verbose=0, warm_start=False, class_weight=None)>"
       ]
      },
      "execution_count": 35,
@@ -1215,10 +1216,10 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=2)]: Using backend ThreadingBackend with 2 concurrent workers.\n",
-      "[Parallel(n_jobs=2)]: Done  46 tasks      | elapsed:    1.8s\n",
-      "[Parallel(n_jobs=2)]: Done 196 tasks      | elapsed:    7.2s\n",
-      "[Parallel(n_jobs=2)]: Done 446 tasks      | elapsed:   16.3s\n",
-      "[Parallel(n_jobs=2)]: Done 500 out of 500 | elapsed:   18.1s finished\n"
+      "[Parallel(n_jobs=2)]: Done  46 tasks      | elapsed:    1.6s\n",
+      "[Parallel(n_jobs=2)]: Done 196 tasks      | elapsed:    6.4s\n",
+      "[Parallel(n_jobs=2)]: Done 446 tasks      | elapsed:   15.5s\n",
+      "[Parallel(n_jobs=2)]: Done 500 out of 500 | elapsed:   17.6s finished\n"
      ]
     }
    ],
@@ -1254,9 +1255,9 @@
      "text": [
       "[Parallel(n_jobs=4)]: Using backend ThreadingBackend with 4 concurrent workers.\n",
       "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    0.9s\n",
-      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:    3.9s\n",
-      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:    8.9s\n",
-      "[Parallel(n_jobs=4)]: Done 500 out of 500 | elapsed:   10.1s finished\n"
+      "[Parallel(n_jobs=4)]: Done 192 tasks      | elapsed:    3.8s\n",
+      "[Parallel(n_jobs=4)]: Done 442 tasks      | elapsed:    9.9s\n",
+      "[Parallel(n_jobs=4)]: Done 500 out of 500 | elapsed:   11.4s finished\n"
      ]
     }
    ],
@@ -1337,19 +1338,19 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    3.4s finished\n",
+      "[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    3.6s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    6.7s finished\n",
+      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    7.0s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   15.7s finished\n",
+      "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   16.7s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   30.7s finished\n",
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   31.9s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.1min finished\n",
+      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.0min finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  1.6min finished\n",
+      "[Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  1.5min finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  2.9min finished\n"
+      "[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  2.5min finished\n"
      ]
     }
    ],
@@ -1387,17 +1388,17 @@
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    5.2s finished\n",
+      "[Parallel(n_jobs=1)]: Done  50 out of  50 | elapsed:    4.7s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:   10.1s finished\n",
+      "[Parallel(n_jobs=1)]: Done 100 out of 100 | elapsed:    8.7s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   24.3s finished\n",
+      "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed:   22.1s finished\n",
       "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   47.4s finished\n",
-      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.5min finished\n",
+      "[Parallel(n_jobs=1)]: Done 500 out of 500 | elapsed:   45.5s finished\n",
+      "[Parallel(n_jobs=1)]: Done 1000 out of 1000 | elapsed:  1.4min finished\n",
       "[Parallel(n_jobs=1)]: Done 1500 out of 1500 | elapsed:  2.0min finished\n",
-      "[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  3.1min finished\n",
-      "[Parallel(n_jobs=4)]: Done   7 out of   7 | elapsed:  3.8min finished\n"
+      "[Parallel(n_jobs=1)]: Done 2500 out of 2500 | elapsed:  2.9min finished\n",
+      "[Parallel(n_jobs=4)]: Done   7 out of   7 | elapsed:  3.5min finished\n"
      ]
     }
    ],
@@ -1486,7 +1487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
