--- a/Class5/Intro-to-AWS-S3.ipynb
+++ b/Class5/Intro-to-AWS-S3.ipynb
@@ -277,9 +277,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env-stats404-w20",
+   "display_name": "env-stats404",
    "language": "python",
-   "name": "env-stats404-w20"
+   "name": "env-stats404"
   },
   "language_info": {
    "codemirror_mode": {
@@ -291,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
