--- a/Class5/Intro-to-AWS-S3.ipynb
+++ b/Class5/Intro-to-AWS-S3.ipynb
@@ -111,16 +111,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "airlines_data_1987_1000rows.csv\n",
-      "rf_Fashion_MNIST_500_trees.joblib\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for file in s3.Bucket(bucket_name).objects.all():\n",
     "    print(file.key)"
@@ -144,7 +135,7 @@
    "outputs": [],
    "source": [
     "# --- Step 1: Create a data set to upload -- or use one for your project:\n",
-    "file_name = \"https://s3.amazonaws.com/h2o-airlines-unpacked/year1987.csv\"\n",
+    "file_name = \"http://s3.amazonaws.com/h2o-airlines-unpacked/year2012.csv\"\n",
     "df = pd.read_csv(filepath_or_buffer=file_name,\n",
     "                 encoding='latin-1',\n",
     "                 nrows=1000)"
@@ -161,7 +152,7 @@
    "outputs": [],
    "source": [
     "# --- Step 2: Specify name of file to be created on s3, to store this CSV:\n",
-    "key_name = \"airlines_data_1987_1000rows.csv\""
+    "key_name = \"airlines_data_2012_1000rows.csv\""
    ]
   },
   {
@@ -184,8 +175,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "airlines_data_1987_1000rows.csv\n",
-      "rf_Fashion_MNIST_500_trees.joblib\n"
+      "airlines_data_2012_1000rows.csv\n"
      ]
     }
    ],
@@ -210,7 +200,18 @@
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/sklearn/base.py:310: UserWarning: Trying to unpickle estimator DecisionTreeClassifier from version 0.22.1 when using version 0.24.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  warnings.warn(\n",
+      "/Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages/sklearn/base.py:310: UserWarning: Trying to unpickle estimator RandomForestClassifier from version 0.22.1 when using version 0.24.1. This might lead to breaking code or invalid results. Use at your own risk.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# --- Step 1: Load a previously estimated model object in workspace:\n",
     "rf_dict = joblib.load(\"../Class4/rf.joblib\") \n",
@@ -245,7 +246,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "airlines_data_1987_1000rows.csv\n",
+      "airlines_data_2012_1000rows.csv\n",
       "rf_Fashion_MNIST_500_trees.joblib\n"
      ]
     }
@@ -291,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
